--- a/kanbanev/index.html
+++ b/kanbanev/index.html
@@ -216,7 +216,7 @@
                 </section>
             </section>
             <section class="extra-info recycle" v-if="this.isEndOfDay && !this.currentDeptCards[0].parts">
-                <strong class="recycle-title">END OF DAY: Plan card has no Parts.</strong>(No Recycle)
+                <strong class="recycle-title">END OF DAY: No Recycle.</strong>
             </section> 
             <section class="instructions" v-if="this.currentPhase === 1">
                 <ul class="instructions-list" v-if="currentPlayer.dept === 0 && currentPlayer.engineer === 0">
