--- a/kanbanev/index.html
+++ b/kanbanev/index.html
@@ -219,10 +219,10 @@
                 <strong class="recycle-title">END OF DAY: No Recycle.</strong>
             </section>
             <section class="recycle" v-if="this.currentPhase === 0 && this.phaseIndex === 3 &&this.currentDeptCards.length > 0 && !this.currentDeptCards[0].parts">
-                <strong class="recycle-title">NOTE: No Recycle will occur at the end-of-day.</strong>
+                <strong class="recycle-title">NOTE: No Recycle will occur at the end of day.</strong>
             </section>
             <section class="recycle" v-if="this.currentPhase === 0 && this.phaseIndex === 3 && this.currentDeptCards.length > 0 && this.currentDeptCards[0].parts">
-                <strong class="recycle-title">NOTE: Recycle may occur at end-of-day.</strong>
+                <strong class="recycle-title">NOTE: Recycle may occur at end of day.</strong>
                 <section class="recycle-section recycle-section-centered">
                     <section>
                         Plan
