--- a/onmars/index.html
+++ b/onmars/index.html
@@ -396,6 +396,9 @@
                 </section>
             </section>
         </section>
+        <section style="text-align: center; padding-bottom: 30px;" v-if="gameHasNotStarted">
+            *Not affiliated with Eagle-Gryphon games.
+        </section>
     </main>
 </body>
 <script src="app.js"></script>
